<resources>
    <string name="app_name">Eventr</string>
    <string name="facebook_app_id">337506293248111</string>
    <string name="drawer_header_text">Username</string>
    <string name="fb_button">Login With Facebook</string>
    <string name="card_test_title">Awesome Food</string>
    <string name="card_test_title_2">Suraj\'s Group</string>
    <string name="card_test_loc">Saki Naka Mumbai</string>
    <string name="groups_button">Groups</string>
    <string name="events_button">Events</string>
    <string name="event_detail_title">Awesome Food</string>
    <string name="groups_title">Groups</string>
    <string name="profile_title">Profile</string>
    <string name="card_test_desc">Got bored of the same old dal roti? Join us to learn how to cook awesome food at home.</string>
    <string name="login_slider_t1">Scroll through a list of events you are going to or interested in.</string>
    <string name="login_slider_t2">Form groups for the event by inviting your facebook contacts or join an existing group.</string>
    <string name="user_preference_file_key">com.eventr.app.eventr.user_preference</string>
    <string name="access_token_key">access_token</string>
    <string name="name">name</string>
    <string name="pic_url">pic_url</string>
    <string name="email">email</string>
    <string name="fb_id">fb_id</string>
    <string name="events_attended_dummy">10</string>
    <string name="total_points_dummy">1500</string>
    <string name="events_attended_placeholder">Events Attended</string>
    <string name="total_points_placeholder">Points Earned</string>
    <string name="email_placeholder">user@eventr.com</string>
    <string name="event_description_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pretium risus dui, id malesuada massa sagittis sed. Suspendisse venenatis ipsum felis, eu molestie tellus tristique a. Sed ac tempus sapien. Nullam eleifend arcu eget mattis vestibulum. Pellentesque sed eleifend orci, quis ornare ipsum. Vivamus et turpis varius magna imperdiet porta. Sed dapibus bibendum risus. Curabitur rhoncus, erat non ultrices ultrices, nunc dui tempor dui, nec pharetra quam ante vel nisl. Etiam turpis odio, consequat consequat vehicula a, suscipit nec felis. Fusce suscipit sapien et erat gravida, nec ullamcorper nunc varius. Etiam dapibus, dolor in pulvinar consectetur, nibh risus faucibus nulla, eu consequat sapien orci eget diam.</string>
    <string name="logout">Logout</string>
    <string name="intent_event_detail_key">event_detail</string>
    <string name="intent_group_detail_key">group_detail</string>
    <string name="add_group_text">Create a Group</string>
    <string name="group_name_hint">Enter group name</string>
    <string name="my_group_label">My Group</string>
    <string name="all_group_label">All Groups</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="total_events_attended">total_events_attended</string>
    <string name="eventr_credits">eventr_credits</string>
    <string name="group_members_label">Members</string>
    <string name="join_group_text">Join Group</string>
    <string name="request_sent">Your request to join this group has been recorded.</string>
    <string name="request_rejected">Your request to join this group has been rejected.</string>
    <string name="request_accepted">You are a member of the group.</string>
    <string name="admin_view">You are an admin of this group</string>
    <string name="no_group_text">You have not participated in any group yet.</string>
    <string name="no_event_text">No event in this category at the moment. Try again later.</string>
    <string name="group_requests_button">group_requests_button</string>
    <string name="close_text">Close</string>
    <string name="requested_members_label">Group Join Requests</string>
    <string name="attended_view">You have successfully attended this group.</string>
    <string name="not_attended_view">You are not marked attended for this group yet.</string>
    <string name="mark_attendance_text_view">This event is over. You can mark attendance now.</string>
    <string name="event_over_not_joined_view">This event is over. You didn\'t join this group successfully.</string>
</resources>
