<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/group_detail_appbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_group_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />
    </android.support.design.widget.AppBarLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            style="Widget.AppCompat.Light.ProgressBar.Small"
            android:id="@+id/group_detail_progress_bar"
            android:layout_gravity="center" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/group_members_container"
            android:orientation="vertical"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/join_group"
                android:visibility="gone">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_person_add_black_24dp"
                    android:id="@+id/add_person_glyph"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:padding="16dp"
                    android:text="@string/join_group_text"
                    android:layout_toRightOf="@id/add_person_glyph"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/request_sent"
                android:background="@color/colorAccent"
                android:textColor="@color/textColorWhite"
                android:visibility="gone"
                android:text="@string/request_sent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/request_rejected"
                android:background="@color/colorAccent"
                android:textColor="@color/textColorWhite"
                android:visibility="gone"
                android:text="@string/request_rejected"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/request_accepted"
                android:background="@color/colorAccent"
                android:textColor="@color/textColorWhite"
                android:visibility="gone"
                android:text="@string/request_accepted"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/admin_view"
                android:background="@color/colorAccent"
                android:textColor="@color/textColorWhite"
                android:visibility="gone"
                android:text="@string/admin_view"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/attended_view"
                android:background="@color/colorAccent"
                android:textColor="@color/textColorWhite"
                android:visibility="gone"
                android:text="@string/attended_view"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/not_attended_view"
                android:background="@color/colorAccent"
                android:textColor="@color/textColorWhite"
                android:visibility="gone"
                android:text="@string/not_attended_view"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/mark_attendance_text_view"
                android:background="@color/colorAccent"
                android:textColor="@color/textColorWhite"
                android:visibility="gone"
                android:text="@string/mark_attendance_text_view"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id="@+id/event_over_not_joined_view"
                android:background="@color/colorAccent"
                android:textColor="@color/textColorWhite"
                android:visibility="gone"
                android:text="@string/event_over_not_joined_view"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/requested_members_container"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:textStyle="bold"
                    android:text="@string/requested_members_label"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/requested_members_recycler"
                    android:orientation="vertical"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/active_members_container">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:textStyle="bold"
                    android:text="@string/group_members_label"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/group_members_recycler"
                    android:orientation="vertical"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_person_add_white_24dp"
        android:id="@+id/floating_action"
        android:layout_gravity="bottom|right"
        android:visibility="gone"
        />
</android.support.design.widget.CoordinatorLayout>
